--- a/_posts/2023-01-19-PQ-陳弱水-疑美論若佔上風-傷害台灣防衛能力走向敗亡.html
+++ b/_posts/2023-01-19-PQ-陳弱水-疑美論若佔上風-傷害台灣防衛能力走向敗亡.html
@@ -32,7 +32,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2020/07/4a06d297-20190831000123m.jpg" alt="" class="wp-image-32532" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/07/4a06d297-20190831000123m.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2020/07/4a06d297-20190831000123m-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/07/4a06d297-20190831000123m-768x512.jpg 768w" sizes="(max-width: 558px) 100vw, 558px" /><figcaption>陳教授以中國以今日的香港為例，表示中國共產黨相當精於計算。<br>圖為2019年香港反送中示威，警方傍晚在政府總部外發射催淚彈，示威者撿起催淚彈往回丟。<br>圖／中央社／吳家昇香港攝</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2020/07/4a06d297-20190831000123m.jpg" alt="" class="wp-image-32532" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/07/4a06d297-20190831000123m.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2020/07/4a06d297-20190831000123m-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/07/4a06d297-20190831000123m-768x512.jpg 768w" sizes="(max-width: 558px) 100vw, 558px" /><figcaption>陳教授以中國以今日的香港為例，表示中國共產黨相當精於計算。<br>圖為2019年香港反送中示威，警方傍晚在政府總部外發射催淚彈，示威者撿起催淚彈往回丟。<br>圖／中央社／吳家昇香港攝</figcaption></figure></div>
 
 
 
