--- a/_posts/2023-01-19-INITIUM-他们的过年-不传统-农历年不是只有家人团圆一个选项.html
+++ b/_posts/2023-01-19-INITIUM-他们的过年-不传统-农历年不是只有家人团圆一个选项.html
@@ -8,10 +8,10 @@ tags: blog
 author: 特约撰稿人 毛奇 发自台北
 ---
 
-<p>「过年“回不回家”、“家人团不团圆”，折射出甚么样对年节的想像？过年只能有一种选项、长成同一个模样吗？」</p><p>特约撰稿人 毛奇 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230120-taiwan-spring-festival/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/01/36c8d6e8dcc545368897e2372f47fe78.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年1月19日，台北迪化街年货大街。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「过年“回家”与否、“团圆”与否，折射出我们对过年的想像。然而，过年只能有一种选项、年节也只能长成同个模样吗？」</p><p>特约撰稿人 毛奇 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230120-taiwan-spring-festival/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/01/36c8d6e8dcc545368897e2372f47fe78.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年1月19日，台北迪化街年货大街。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2023年1月19日，台北迪化街年货大街。<span class="credit">摄：唐佐欣/端传媒</span></figcaption></figure><p>农历年原是家族团聚欢乐时光，但关于过年节与过生活，其实有更多的样貌。<br><br>在农历新年假期中，多数人返乡过节，即便一整年中与家人说不上几次话、见不著几次面，但“过年”的传统仪式，便以家庭为中心点，让四散出去的异乡人们，集体展开一场年度迁徙行动，回到那名之为“家”的处所。<br><br>端传媒访问五组非传统回家围炉的年节过法，原因各异。其中，有些人不回家过年，是因为要逃离紧绷的亲族压力，或反之没有稠密的家人羁绊而不需要回家。有些人不过年节，是因为文化差异，农历年不是习惯选项；有些人则选择投入工作，是因为劳工在年假期间可以拥有更高的薪资报酬。<br><br>关于选择投入工作取代过年，根据今（2023）年台湾行政院主计总处公布的数字，会更有感：1月6日公布的最新消费者物价指数（CPI）， 俗称通膨率的CPI在12月相较去年升到2.71％，全年通膨率则为2.95％，创下14年新高。<br><br>食物涨价，油料费涨，房地产价格更是连年居高不下，并随著央行升息，更使得部分房东调涨房租。这个年在想发红包之前，人们担心的是，如何赚到即将要发出去的红包钱？<br><br>过年“回家”与否、“团圆”与否，折射出我们对过年的想像。然而，过年只能有一种选项、年节也只能长成同个模样吗？</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230120-taiwan-spring-festival/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/01/b46cf65b841645b59296d7379531a220.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="NGO工作者 Amy Lin。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">NGO工作者 Amy Lin。<span class="credit">摄：唐佐欣/端传媒</span></figcaption></figure>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230120-taiwan-spring-festival/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/01/a3c13938a4894ab389b1afd2a008fa56.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="NGO工作者 Amy Lin。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">NGO工作者 Amy Lin。<span class="credit">摄：唐佐欣/端传媒</span></figcaption></figure>
 
 <h2>过年的加倍薪水收入，成为不用在家过年的好理由</h2>
 <h3>Amy Lin，NGO工作者（40岁）</h3>
