--- a/_posts/2023-01-20-PQ-日經亞洲-美國擴大國民兵對台灣軍隊的訓練.html
+++ b/_posts/2023-01-20-PQ-日經亞洲-美國擴大國民兵對台灣軍隊的訓練.html
@@ -9,79 +9,40 @@ author: 謝時
 ---
 
 <p>《日經亞洲》（Nikkei Asia）1 月 20 日報導，知情人士透露，早在 2022 年春季前就已開始訓練台灣軍隊。美國政府主要用意為擴大對台灣軍隊的訓練範圍，以加強對中國的威懾力量，並深化與台灣的合作 —— 因為國民兵為烏克蘭軍隊進行的演練有助於烏克蘭抵禦俄羅斯軍隊的入侵。</p>
-
-
-
 <p>台灣總統蔡英文在 2022 年 5 月底接待美國聯邦參議員達克沃斯（Tammy Duckworth）時，蔡英文就曾提到美國國防部正在「積極規劃美國國民兵和台灣國防軍隊之間的合作」。</p>
-
-
-
 <p>直接參與美台國防安全合作的消息人士表示，國民兵的訓練早在蔡英文公開透露之前就已經開始了。數州的國民兵部隊分別在台灣和美國訓練了台灣軍隊，與台灣軍隊合作的國民兵部隊似乎有包括美國夏威夷州的部隊。</p>
-
-
-
 <p class="pqnote">五角大廈發言人告訴日經新聞：「我們對具體的行動、交流或訓練沒有評論，但我要強調的是，我們對台灣的支持以及與台灣的國防安全關係維持不變，共同應對中華人民共和國所構成的威脅。」「我們對台灣的承諾堅如磐石，並致力於維護台海和周遭區域的和平穩定。」</p>
-
-
-
 <h2>國民兵是以州為單位的美國軍事力量</h2>
-
-
-
 <p>美國每個州都有國民兵（The National Guard）編制，一般時候由州長所指揮，國民兵經常在災害發生時被動員來維護公共秩序。在海外作戰期間，它還可以負責聯邦任務，被部署到戰場上或提供後勤支援。過去在阿富汗和伊拉克戰爭中，國民兵就曾被徵召動員。</p>
-
-
-
-<div class="wp-block-jetpack-slideshow aligncenter" data-effect="slide"><div class="wp-block-jetpack-slideshow_container swiper-container"><ul class="wp-block-jetpack-slideshow_swiper-wrapper swiper-wrapper"><li class="wp-block-jetpack-slideshow_slide swiper-slide"><figure><img loading="lazy" alt="" class="wp-block-jetpack-slideshow_image wp-image-125734" data-id="125734" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196-1024x709.jpg" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196-1024x709.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196-300x208.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196-768x532.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196-1536x1063.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption class="wp-block-jetpack-slideshow_caption gallery-caption">美國各州若是發生嚴重天災，都會出動國民兵協助救災<br>圖／U.S. Army photo by STAFF SGT. Russell Lee Klika</figcaption></figure></li><li class="wp-block-jetpack-slideshow_slide swiper-slide"><figure><img loading="lazy" alt="" class="wp-block-jetpack-slideshow_image wp-image-125732" data-id="125732" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/75c8f5e7-221122-z-tj333-001-1024x590.jpg" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/75c8f5e7-221122-z-tj333-001-1024x590.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/75c8f5e7-221122-z-tj333-001-300x173.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/75c8f5e7-221122-z-tj333-001-768x443.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/75c8f5e7-221122-z-tj333-001.jpg 1430w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption class="wp-block-jetpack-slideshow_caption gallery-caption">麻薩諸塞州（Massachusetts）國民兵與美國海軍中央司令部軍人一同在巴林執行任務<br>圖／U.S. Central Command</figcaption></figure></li><li class="wp-block-jetpack-slideshow_slide swiper-slide"><figure><img loading="lazy" alt="" class="wp-block-jetpack-slideshow_image wp-image-125733" data-id="125733" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/803a99c6-221221-z-wa448-0077-1024x683.jpg" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/803a99c6-221221-z-wa448-0077-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/803a99c6-221221-z-wa448-0077-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/803a99c6-221221-z-wa448-0077-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/803a99c6-221221-z-wa448-0077.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption class="wp-block-jetpack-slideshow_caption gallery-caption">紐約州空軍國民兵現在管理著一個最先進的C-17運輸機維修平台<br>圖／National Guard Photo by Tech. Sgt. Daniel Hotter</figcaption></figure></li></ul><a class="wp-block-jetpack-slideshow_button-prev swiper-button-prev swiper-button-white" role="button"></a><a class="wp-block-jetpack-slideshow_button-next swiper-button-next swiper-button-white" role="button"></a><a aria-label="Pause Slideshow" class="wp-block-jetpack-slideshow_button-pause" role="button"></a><div class="wp-block-jetpack-slideshow_pagination swiper-pagination swiper-pagination-white"></div></div></div>
-
-
-
+<div class="wp-block-jetpack-slideshow aligncenter" data-effect="slide">
+<div class="wp-block-jetpack-slideshow_container swiper-container">
+<ul class="wp-block-jetpack-slideshow_swiper-wrapper swiper-wrapper">
+<li class="wp-block-jetpack-slideshow_slide swiper-slide">
+<figure><img loading="lazy" alt="" class="wp-block-jetpack-slideshow_image wp-image-125734" data-id="125734" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196-1024x709.jpg" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196-1024x709.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196-300x208.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196-768x532.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196-1536x1063.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/7d24a953-da-sd-07-31196.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption class="wp-block-jetpack-slideshow_caption gallery-caption">美國各州若是發生嚴重天災，都會出動國民兵協助救災<br />圖／U.S. Army photo by STAFF SGT. Russell Lee Klika</figcaption></figure>
+</li>
+<li class="wp-block-jetpack-slideshow_slide swiper-slide">
+<figure><img loading="lazy" alt="" class="wp-block-jetpack-slideshow_image wp-image-125732" data-id="125732" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/75c8f5e7-221122-z-tj333-001-1024x590.jpg" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/75c8f5e7-221122-z-tj333-001-1024x590.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/75c8f5e7-221122-z-tj333-001-300x173.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/75c8f5e7-221122-z-tj333-001-768x443.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/75c8f5e7-221122-z-tj333-001.jpg 1430w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption class="wp-block-jetpack-slideshow_caption gallery-caption">麻薩諸塞州（Massachusetts）國民兵與美國海軍中央司令部軍人一同在巴林執行任務<br />圖／U.S. Central Command</figcaption></figure>
+</li>
+<li class="wp-block-jetpack-slideshow_slide swiper-slide">
+<figure><img loading="lazy" alt="" class="wp-block-jetpack-slideshow_image wp-image-125733" data-id="125733" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/803a99c6-221221-z-wa448-0077-1024x683.jpg" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/803a99c6-221221-z-wa448-0077-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/803a99c6-221221-z-wa448-0077-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/803a99c6-221221-z-wa448-0077-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/803a99c6-221221-z-wa448-0077.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption class="wp-block-jetpack-slideshow_caption gallery-caption">紐約州空軍國民兵現在管理著一個最先進的C-17運輸機維修平台<br />圖／National Guard Photo by Tech. Sgt. Daniel Hotter</figcaption></figure>
+</li>
+</ul>
+<p><a class="wp-block-jetpack-slideshow_button-prev swiper-button-prev swiper-button-white" role="button"></a><a class="wp-block-jetpack-slideshow_button-next swiper-button-next swiper-button-white" role="button"></a><a aria-label="Pause Slideshow" class="wp-block-jetpack-slideshow_button-pause" role="button"></a></p>
+<div class="wp-block-jetpack-slideshow_pagination swiper-pagination swiper-pagination-white"></div>
+</div>
+</div>
 <p>國民兵主要透過「州合作夥伴計畫」（State Partnership Program, SPP）訓練 80 多個國家的軍隊。其訓練範圍會因不同國家而異，其中包括步兵戰術操作、飛機操作、網路防禦、災難應對、反恐對策和醫療支援。</p>
-
-
-
 <p class="pqnote">雖然一個國民兵部隊通常負責訓練一個國家，但台灣的訓練「與 SPP 不同，因為台灣是與多個州合作」消息人士透露。「在 SPP 中，大多數國家只與一個特定的州合作。台灣有比 SPP 更多的培訓選擇。」</p>
-
-
-
 <p class="pqnote">在過去，美國對台的訓練往往與出售給台灣的武器系統和平台相關。《華爾街日報》（The Wall Street Journal）2021 年 10 月曾報導，一支美國特種作戰部隊和一支海軍陸戰隊特遣隊已經在台灣執行至少一年的訓練，但當時訓練的領域似乎很有限。</p>
-
-
-
 <p>前情提要：<a href="https://www.pourquoi.tw/taiwan-20211028-2/" target="_blank" rel="noopener">蔡英文首次證實美軍在台訓練　指中國威脅日增</a></p>
-
-
-
 <h2>台美擴大訓練交流反映美國日益關注台灣的潛在軍事危機</h2>
-
-
-
 <p>美國白宮國家安全會議（NSC）發言人暨戰略溝通（Strategic Communication）總指揮柯比（John Kirby）上週在接受採訪時表示：「我們仍然認為，台海當前的緊張局勢沒有理由演變成衝突。沒有理由。因為日本和美國都沒有改變我們的立場。」</p>
-
-
-
 <p>自去年美國眾議院議長裴洛西 8 月訪問台灣以來，中國不斷加大軍事脅迫力道。</p>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125-1024x682.jpg" alt="" class="wp-image-125735" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125-1024x682.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125-1536x1023.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中華民國國軍實力尚待提升，這也是台美軍事合作交流很重要的一部分<br>圖／國防部發言人@MilitarySpokesman</figcaption></figure></div>
-
-
-
+<div class="wp-block-image">
+<figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125-1024x682.jpg" alt="" class="wp-image-125735" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125-1024x682.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125-1536x1023.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/9acb4a2e-278890344_293760279595125.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中華民國國軍實力尚待提升，這也是台美軍事合作交流很重要的一部分<br />圖／國防部發言人@MilitarySpokesman</figcaption></figure>
+</div>
 <p class="pqnote">美國智庫「新美國安全中心」（CNAS）高級研究員史托克斯（Jacob Stokes）表示：「如果這消息得到證實，透過台灣軍隊和美國國民兵之間的合作和多方訓練，這是極為重要的一步，而這已在華府談論了一段時間。」「美國國民兵的訓練可能會側重於提高台灣運用後備部隊的能力，以支援台灣社會的軍事動員，並發揮更大的作用。」</p>
-
-
-
 <p>國民兵在加強烏克蘭的防禦能力上發揮了關鍵作用。當俄羅斯於 2014 年單方面吞併克里米亞後，美國在烏克蘭發動了多州聯合訓練小組。不同州的國民兵被分派到烏克蘭西部利維夫（Lviv）地區的訓練設施執行任務。</p>
-
-
-
 <p>負責監督烏克蘭部隊訓練的美國陸軍准將希柏特（Brig. Gen. Joseph Hilbert）在 2022 年 5 月告訴記者，在大約七年的時間裡，已有 23,000 名烏克蘭士兵在接受該計畫的訓練。希柏特認為，國民兵的訓練在阻止俄羅斯軍隊的推進上有做出貢獻。</p>
-
-
-
 <p>「我認為『美國對烏克蘭部隊的投資』已經……你已經可看到它是如何回報的。」他說。</p>
-
-
-
-<p>參考新聞來源：<br><a href="https://asia.nikkei.com/Politics/International-relations/Taiwan-tensions/U.S.-expands-training-of-Taiwanese-military-with-National-Guard" target="_blank" rel="noopener">2023/01/20　Nikkei Asia　U.S. expands training of Taiwanese military with National Guard</a></p><p>The post <a href="https://pourquoi.tw/intlnews-nasaoa-230114-230120-1/">日經亞洲：美國擴大國民兵對台灣軍隊的訓練</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p>參考新聞來源：<br /><a href="https://asia.nikkei.com/Politics/International-relations/Taiwan-tensions/U.S.-expands-training-of-Taiwanese-military-with-National-Guard" target="_blank" rel="noopener">2023/01/20　Nikkei Asia　U.S. expands training of Taiwanese military with National Guard</a></p><p>The post <a href="https://pourquoi.tw/intlnews-nasaoa-230114-230120-1/">日經亞洲：美國擴大國民兵對台灣軍隊的訓練</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
