--- a/_posts/2023-01-20-PQ-韓國阿聯關係重大進展-核電廠工程經驗贏得阿聯300億美元投資.html
+++ b/_posts/2023-01-20-PQ-韓國阿聯關係重大進展-核電廠工程經驗贏得阿聯300億美元投資.html
@@ -9,111 +9,36 @@ author: 林貝利
 ---
 
 <p>韓國總統尹錫悅於 1 月 14 日應邀前往阿拉伯聯合大公國（UAE）進行國是訪問，4 天行程談成包含核能、國防工業、石油優先購買權等 48 項合作備忘錄，也因 2009 年的核電廠合作的經驗，獲得了阿聯 300 億美元（約新台幣 9,000 億元）的大規模投資。15 日尹錫悅訪問韓軍駐阿聯部隊以「阿聯最大威脅是伊朗」再次引起失言風波，韓媒批評尹錫悅草率發言將損及國家利益。</p>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e3e99db-e20b22d2-2f3f-4710-bbd2-6aea2ccbc0ec-1024x682.jpeg" alt="" class="wp-image-125692" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e3e99db-e20b22d2-2f3f-4710-bbd2-6aea2ccbc0ec-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e3e99db-e20b22d2-2f3f-4710-bbd2-6aea2ccbc0ec-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e3e99db-e20b22d2-2f3f-4710-bbd2-6aea2ccbc0ec-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e3e99db-e20b22d2-2f3f-4710-bbd2-6aea2ccbc0ec.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>韓國總統尹錫悅應邀前往阿聯進行兩國自1980年建交以來的首次國是訪問，受到阿聯最高等級的歡迎。<br>（圖／韓國總統府）</figcaption></figure></div>
-
-
-
+<div class="wp-block-image">
+<figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e3e99db-e20b22d2-2f3f-4710-bbd2-6aea2ccbc0ec-1024x682.jpeg" alt="" class="wp-image-125692" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e3e99db-e20b22d2-2f3f-4710-bbd2-6aea2ccbc0ec-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e3e99db-e20b22d2-2f3f-4710-bbd2-6aea2ccbc0ec-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e3e99db-e20b22d2-2f3f-4710-bbd2-6aea2ccbc0ec-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e3e99db-e20b22d2-2f3f-4710-bbd2-6aea2ccbc0ec.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>韓國總統尹錫悅應邀前往阿聯進行兩國自1980年建交以來的首次國是訪問，受到阿聯最高等級的歡迎。<br />（圖／韓國總統府）</figcaption></figure>
+</div>
 <p>此次與尹錫悅同行的百家企業大陣仗經貿使節團包含三星電子會長李在鎔、SK 集團會長崔泰源、現代汽車集團會長鄭義宣等人。</p>
-
-
-
 <p>韓媒《中央日報》評論此行是 2009 年 12 月播下的中東首座核電廠——阿聯巴拉卡核電廠的種子，在 2023 年 1 月變成阿聯對韓國投資 300 億美元投資的果實回來了。這個果實有可能成為核電、能源、企業投資和國防工業這四個核心領域之外，發展航太和生物技術等先進產業的另一顆種子。</p>
-
-
-
 <p>韓國尹錫悅總統於 1 月 14 日國是訪問阿聯，並於 15 日與阿聯總統穆罕默德 （Sheikh Mohamed bin Zayed Al Nahyan）舉行了領袖會談。會談期間，穆罕默德告訴尹錫悅，他決定投資韓國 300 億美元，因為他相信韓國在任何情況下都會履行承諾。據韓國總統辦公室公共關係首席秘書金恩慧稱，穆罕默德總統說他「對韓國公司無論遇到疫情等各種困難都能履行合約的能力留下了深刻的印象。」</p>
-
-
-
 <p>對此，尹錫悅回應說「作為總統，我將密切關注細節，使這項投資不僅在投資收益方面，且能夠在阿聯永續的中長期發展中發揮重要影響力。」</p>
-
-
-
 <p>尹錫悅邀請穆罕默德總統在今年內方便的時候訪問韓國，穆罕默德總統回答說「韓國已經是我心中的『第二故鄉』，我很樂意在不久的將來訪問韓國。」</p>
-
-
-
 <h3>阿聯史上最大海外投資</h3>
-
-
-
 <p>韓國總統辦公室在這次國是訪問前把重點放在經濟外交上，所以訪問成果懷有期望，雖是這麼說，但 300 億美元的投資規模超出了預期，總統辦公室國家政策規劃首席秘書李官燮解釋說「這如果考慮到迄今為止的類似案例也是壓倒性的金額」。</p>
-
-
-
 <p>而去年一整年韓國從海外招商引資的直接投資金額為 305 億美元規模。這次對韓國的投資也是阿聯締結的雙邊協議中最大規模的，大幅超過對英國投資 100 億英鎊的紀錄。阿聯已承諾透過主權財富基金在中國投資 50 億美元，在法國投資 15 億歐元。</p>
-
-
-
 <p>為了促進有史以來最大的投資承諾，兩國計劃建立一個暫時稱為「韓國-阿聯投資平台」的計劃。它將成為國家領袖之間迅速和順利執行投資協議的一個制度性機制。這 300 億美元目前沒有設定具體的用途或時程。總統辦公室的一位高層說「具體上提到了下一代核電——小型模組化反應爐（SMRs）、氫氣相關技術、可再生能源和國防工業等領域。投資實體是以阿布達比投資局（阿聯的主權財富基金）為首的整個阿聯。」</p>
-
-
-
 <p>韓國總統辦公室解釋說，穆罕默德總統決定大規模投資的根本在於兩國之間的信任，這種信任始於 2009 年 12 月的巴拉卡核電廠。巴拉卡核電廠的 1、2 號機組分別於 2021 年和 2022 年開始運轉，目前提供阿布達比 60% 的電力和阿聯總電力的 15%。據說從合約到開始商業運轉，幾乎沒有發生會耽誤工程進度的問題。</p>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4d5263f0-cab25960-0d6b-4d8a-9ba4-9d213bb04ae4-1024x682.jpeg" alt="" class="wp-image-125690" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4d5263f0-cab25960-0d6b-4d8a-9ba4-9d213bb04ae4-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4d5263f0-cab25960-0d6b-4d8a-9ba4-9d213bb04ae4-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4d5263f0-cab25960-0d6b-4d8a-9ba4-9d213bb04ae4-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4d5263f0-cab25960-0d6b-4d8a-9ba4-9d213bb04ae4.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>韓國總統尹錫悅與阿聯總統穆罕默德在1月15日進行會談。<br>（圖／韓國總統府）</figcaption></figure></div>
-
-
-
+<div class="wp-block-image">
+<figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4d5263f0-cab25960-0d6b-4d8a-9ba4-9d213bb04ae4-1024x682.jpeg" alt="" class="wp-image-125690" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4d5263f0-cab25960-0d6b-4d8a-9ba4-9d213bb04ae4-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4d5263f0-cab25960-0d6b-4d8a-9ba4-9d213bb04ae4-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4d5263f0-cab25960-0d6b-4d8a-9ba4-9d213bb04ae4-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4d5263f0-cab25960-0d6b-4d8a-9ba4-9d213bb04ae4.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>韓國總統尹錫悅與阿聯總統穆罕默德在1月15日進行會談。<br />（圖／韓國總統府）</figcaption></figure>
+</div>
 <p>事實上，尹錫悅總統領袖會議上的開幕詞中說「我希望我們兩國之間的核能合作將提高到最高水準，並將氫氣合作提高到「韓國 &#8211; 阿聯氫氣聯盟」水準，使阿聯成為韓國的第一大投資國，並且共同應對各種安全威脅」。穆罕默德總統也說「我們兩國之間最具代表性的合作計畫是在巴拉卡核電廠的合作。我們創造了一個和平利用核能的成功神話，是世界的模範。」據韓國總統辦公室的高層說，穆罕默德總統還談到「韓國在過去十多年來履行承諾的表現是奇跡般的例子」。</p>
-
-
-
 <p>以尹錫悅總統的國是訪問作為契機，在兩國領袖的見證下，簽署了 13 項核能與能源、投資、國防工業和氣候變遷領域等的合作備忘錄（MOU）。這些 MOU 包含在 300 億美元的投資意向中，韓國總統辦公室官員將此解釋為「為實施 300 億美元的投資建立體制和合作基礎」。</p>
-
-
-
 <p>這次的 MOU 包含「戰略國防工業合作相關備忘錄」具體化了技術情報交流和技術轉移等國防工業領域的戰略合作；「韓國 &#8211; 阿聯國際聯合儲備計劃」，在韓國國內石油供需發生危機時，韓國將在契約規定的數量上行使優先購買權。這還包含在發生緊急狀況時優先購買 400 萬桶阿聯原油的權利。</p>
-
-
-
 <p>韓國總統辦公室的高層說「如果我們把多個機關的主管簽署的，加上在兩位領袖見證下簽署的 13 項 MOU ，就會有 30 項以上。如果再加上在商業論壇等簽署的，將有超過 40 項 MOU。」在尹錫悅 4 天訪阿聯的行程中，達成了48 項合作備忘錄。</p>
-
-
-
 <h3>失言「阿聯最大威脅是伊朗」韓國外交部急滅火</h3>
-
-
-
 <p>另外尹錫悅 15 日訪問派遣至阿聯的韓國兄弟部隊（Akh Unit）時，致詞表示「阿聯的敵人、最大的威脅是伊朗，而我們的敵人是北韓」，說韓國和阿聯是兄弟，立場很相近。</p>
-
-
-
 <p>對此，伊朗外交部表示他們正在和阿聯修復關係，對於尹錫悅的發言感到不滿，，並強調尹錫悅對這些過程「完全無知」。伊朗外交次長 18 日也召來韓國駐伊朗大使，他指出伊朗和大多數波斯灣國家之間有根深蒂固的友好關係，向他表示尹錫悅的發言「等同於是在傷害（中東）區域的和平與穩定」，要求修正發言。</p>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8bc308aa-09b527e4-5c57-45fd-af67-26e3cea736f7-1024x682.jpeg" alt="" class="wp-image-125691" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8bc308aa-09b527e4-5c57-45fd-af67-26e3cea736f7-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8bc308aa-09b527e4-5c57-45fd-af67-26e3cea736f7-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8bc308aa-09b527e4-5c57-45fd-af67-26e3cea736f7-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8bc308aa-09b527e4-5c57-45fd-af67-26e3cea736f7.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>尹錫悅勉勵駐阿聯兄弟部隊官兵，一句「阿聯最大威脅是伊朗」擅自為他國定義關係，再次引起失言風波。<br>（圖／韓國總統府）</figcaption></figure></div>
-
-
-
+<div class="wp-block-image">
+<figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8bc308aa-09b527e4-5c57-45fd-af67-26e3cea736f7-1024x682.jpeg" alt="" class="wp-image-125691" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8bc308aa-09b527e4-5c57-45fd-af67-26e3cea736f7-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8bc308aa-09b527e4-5c57-45fd-af67-26e3cea736f7-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8bc308aa-09b527e4-5c57-45fd-af67-26e3cea736f7-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/8bc308aa-09b527e4-5c57-45fd-af67-26e3cea736f7.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>尹錫悅勉勵駐阿聯兄弟部隊官兵，一句「阿聯最大威脅是伊朗」擅自為他國定義關係，再次引起失言風波。<br />（圖／韓國總統府）</figcaption></figure>
+</div>
 <p>韓國外交部針對尹錫悅的發言辯稱是為了激勵官兵盡力完成在阿聯的任務，還表示這「不會影響韓國 &#8211; 伊朗關係」等，在尹錫悅的一句話後，相關單位迫於收拾這些爭議。</p>
-
-
-
 <p>包含去年 9 月在美國紐約的國際會議上，尹錫悅在會議結束要離開會場時，在公眾場合用了粗俗不適當的字眼與身旁官員交談，被現場媒體錄下，並以「侮辱美國國會」大肆報導。</p>
-
-
-
-<iframe loading="lazy" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftw.pourquoi%2Fposts%2Fpfbid02axgyRMLDUZSFtWJShqGy738XwMR9sGtHbTxHdEoC2TfigRagUYpmDRXASMVECYggl&#038;show_text=true&#038;width=500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-
-
-
+<p><iframe loading="lazy" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftw.pourquoi%2Fposts%2Fpfbid02axgyRMLDUZSFtWJShqGy738XwMR9sGtHbTxHdEoC2TfigRagUYpmDRXASMVECYggl&#038;show_text=true&#038;width=500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p>
 <p>偏左的《韓民族日報》在社論上批評尹錫悅每在外訪時就失言，主張外交失言會損及國家利益。並指出韓國總統作為第三方胡亂為阿聯和伊朗定義關係，是在外交上的草率發言。還會讓人誤以為駐紮在阿聯的部隊是針對伊朗。</p>
-
-
-
 <p>而且尤其因為美國 2018 年對伊朗發動的原油禁運等制裁，使得韓國和伊朗的關係承受了不少壓力。已經進口到韓國的伊朗原油，韓國還有 70 億美元沒辦法付給伊朗。</p>
-
-
-
 <p>尹錫悅的失言風波當然也引來最大在野黨「共同民主黨」的砲火猛攻，包含其國會議員批評「總統的嘴巴是現在最大的安全風險」等。</p>
-
-
-
-<p>參考新聞連結：<br><a href="https://s.japanese.joins.com/Jarticle/299927">2023/01/16　中央日報　ＵＡＥ大統領「韓国の約束履行は奇跡のよう、３００億ドル投資する」</a><br><a href="https://s.japanese.joins.com/Jarticle/300028">2023/01/18　中央日報　ドバイで「漢江の奇跡」に言及した尹大統領、「私は大韓民国の営業社員」</a><br><a href="https://jp.yna.co.kr/view/AJP20230116000200882?">2023/01/16　中央日報　尹大統領　３００億ドル投資表明のＵＡＥ大統領に「信頼忘れない」</a><br><a href="https://www.sankei.com/article/20230119-MJPCZBTMRJK4NDIKER3OXVC3QY/">2023/01/19　産経　「イランは兄弟国家の敵」韓国尹大統領発言にイラン外務省が抗議</a><br><a href="https://m.hani.co.kr/arti/opinion/editorial/1076094.html">2023/01/17　The Hankyoreh 　“UAE의 적은 이란”, 윤 대통령의 끝없는 ‘외교 설화’ [사설]</a><br><a href="https://www.president.go.kr/president/speeches/sKYu7eL4">2023/01/15　한-UAE 확대회담 윤석열 대통령 모두발언</a></p><p>The post <a href="https://pourquoi.tw/intlnews-neasia-230113-230119-2/">韓國阿聯關係重大進展　核電廠工程經驗贏得阿聯300億美元投資</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p>參考新聞連結：<br /><a href="https://s.japanese.joins.com/Jarticle/299927">2023/01/16　中央日報　ＵＡＥ大統領「韓国の約束履行は奇跡のよう、３００億ドル投資する」</a><br /><a href="https://s.japanese.joins.com/Jarticle/300028">2023/01/18　中央日報　ドバイで「漢江の奇跡」に言及した尹大統領、「私は大韓民国の営業社員」</a><br /><a href="https://jp.yna.co.kr/view/AJP20230116000200882?">2023/01/16　中央日報　尹大統領　３００億ドル投資表明のＵＡＥ大統領に「信頼忘れない」</a><br /><a href="https://www.sankei.com/article/20230119-MJPCZBTMRJK4NDIKER3OXVC3QY/">2023/01/19　産経　「イランは兄弟国家の敵」韓国尹大統領発言にイラン外務省が抗議</a><br /><a href="https://m.hani.co.kr/arti/opinion/editorial/1076094.html">2023/01/17　The Hankyoreh 　“UAE의 적은 이란”, 윤 대통령의 끝없는 ‘외교 설화’ [사설]</a><br /><a href="https://www.president.go.kr/president/speeches/sKYu7eL4">2023/01/15　한-UAE 확대회담 윤석열 대통령 모두발언</a></p><p>The post <a href="https://pourquoi.tw/intlnews-neasia-230113-230119-2/">韓國阿聯關係重大進展　核電廠工程經驗贏得阿聯300億美元投資</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
