--- a/_posts/2023-01-21-PQ-蘇貞昌拍板通過跨國同婚-除中國外之同志伴侶可在台灣登記.html
+++ b/_posts/2023-01-21-PQ-蘇貞昌拍板通過跨國同婚-除中國外之同志伴侶可在台灣登記.html
@@ -9,47 +9,18 @@ author: 李 晏蓉
 ---
 
 <p>內政部 19 日發函將跨國同性婚姻範圍擴大，無法同婚國家與包含港、澳等人士皆可來台登記。政院官員指出，行政院長蘇貞昌認為目前多項法律訴訟結果均承認跨國同婚合法，政府必須面對此事，拍板透過函釋解套，允許跨國同志伴侶登記。</p>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4-1024x1016.jpg" alt="專法通過四年後，正式宣布開放跨國同性婚姻，未來除了中國同性伴侶，其餘跨國及港澳伴侶均准予結婚登記／圖：彩虹平權大平台" class="wp-image-125745" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4-1024x1016.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4-300x298.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4-150x150.jpg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4-768x762.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4.jpg 1170w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>專法通過四年後，正式宣布開放跨國同性婚姻，未來除了中國同性伴侶，其餘跨國及港澳伴侶均准予結婚登記／圖：彩虹平權大平台</figcaption></figure></div>
-
-
-
+<div class="wp-block-image">
+<figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4-1024x1016.jpg" alt="專法通過四年後，正式宣布開放跨國同性婚姻，未來除了中國同性伴侶，其餘跨國及港澳伴侶均准予結婚登記／圖：彩虹平權大平台" class="wp-image-125745" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4-1024x1016.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4-300x298.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4-150x150.jpg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4-768x762.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5f13553a-230121-4.jpg 1170w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>專法通過四年後，正式宣布開放跨國同性婚姻，未來除了中國同性伴侶，其餘跨國及港澳伴侶均准予結婚登記／圖：彩虹平權大平台</figcaption></figure>
+</div>
 <h2><strong>▌</strong>願各縣市政府改變過去見解　同婚已是台灣公共秩序的一部分</h2>
-
-
-
 <p>台灣於 2019 年 5 月 17 日於立法院三讀通過「司法院釋字第七四八號解釋施行法」的同婚專法，成為亞洲第一個實行同性婚姻的國家。不過由於過去跨國同性伴侶登記只承認同樣通過同婚的國家，因此跨國婚姻的訴訟屢見不鮮，許多跨國同志伴侶都在持續爭取權益。</p>
-
-
-
 <p>而在台北高等行政法院累積五個有利跨國同婚的勝訴判決、在新北市訴願會累積四個有利的訴願決定後，19 日內政部正式發函表示要求各縣市政府改變過去見解，認為同婚已經是台灣公共秩序的一部分，為了避免個案認定不一，未來除了兩岸同性伴侶，其餘跨國伴侶均適用「涉外民事法律適用法」第 8 條規定，准予結婚登記。</p>
-
-
-
 <h2><strong>▌</strong>苦熬近四年　跨國伴侶終團圓</h2>
-
-
-
 <p>消息一出，台灣伴侶權益推動聯盟、國際特赦組織台灣分會、台灣同志諮詢熱線協會、彩虹平權大平台、台灣同志家庭權益促進會、台灣人權促進會、以及東南亞跨國同婚交流會等團體共同發表聲明。聲明中特別感謝給予跨國同性伴侶勝訴的台北高等行政法院及新北市訴願會，以及准予婚姻登記的新北市淡水戶政事務所，讓<strong>大法官釋字第 748 號解釋所肯認的同性別二人之婚姻自由與平等權，再次被深刻寫入台灣歷史與實踐。</strong></p>
-
-
-
 <p>此外，同時也感謝在四年前挺住公投後的社會壓力，力促同婚專法的通過的行政院長蘇貞昌，和持續支持跨國同婚的行政院政務委員羅秉成、國家人權委員會委員紀惠容、立法委員王婉諭、邱顯智、羅美玲、范雲等人。</p>
-
-
-
 <p>而聲明中也提到，很遺憾兩岸同性伴侶無法在這一波改革之後登記結婚，但也了解身處在不同政治與公務部門的夥伴已經盡了極大努力，未來將會繼續陪伴兩岸伴侶，直到可以平等結婚的一刻。</p>
-
-
-
 <p>范雲也特別於臉書上發文，認為<strong>同性婚姻合法化之後，臺灣社會所經歷的是更多的愛與美好，而不是原本反對方宣稱的動盪與破碎</strong>，並表示這是臺灣展現人權價值、體現性別平等的一大步。</p>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/88291921-230121-3-1024x938.jpeg" alt="民團發表聲明，感謝一路走來支持跨國同性婚姻的夥伴，也期望未來能開放兩岸同性伴侶登記／圖：彩虹平權大平台" class="wp-image-125744" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/88291921-230121-3-1024x938.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/88291921-230121-3-300x275.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/88291921-230121-3-768x704.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/88291921-230121-3.jpeg 1124w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>民團發表聲明，感謝一路走來支持跨國同性婚姻的夥伴，也期望未來能開放兩岸同性伴侶登記／圖：彩虹平權大平台</figcaption></figure></div>
-
-
-
-<p>新聞回顧：<br>2020/05/17　報呱　<a href="https://www.pourquoi.tw/taiwan-news20200517-1/" target="_blank" rel="noopener"></a><a href="https://www.pourquoi.tw/taiwan-news20200517-1/" target="_blank" rel="noopener">彩虹旗幟升起周年　哪些議題尚待陽光普照？</a><br>2021/01/27　報呱　<a href="https://www.president.gov.tw/News/27240" target="_blank" rel="noreferrer noopener"></a><a href="https://www.pourquoi.tw/taiwan-news20210127-1/" target="_blank" rel="noopener" title="10127-1/">司法院日前提案修法　允許外國人在台成立同性婚姻</a></p><p>The post <a href="https://pourquoi.tw/taiwan-20230121-1/">蘇貞昌拍板通過跨國同婚　除中國外之同志伴侶可在台灣登記</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<div class="wp-block-image">
+<figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/88291921-230121-3-1024x938.jpeg" alt="民團發表聲明，感謝一路走來支持跨國同性婚姻的夥伴，也期望未來能開放兩岸同性伴侶登記／圖：彩虹平權大平台" class="wp-image-125744" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/88291921-230121-3-1024x938.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/88291921-230121-3-300x275.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/88291921-230121-3-768x704.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/88291921-230121-3.jpeg 1124w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>民團發表聲明，感謝一路走來支持跨國同性婚姻的夥伴，也期望未來能開放兩岸同性伴侶登記／圖：彩虹平權大平台</figcaption></figure>
+</div>
+<p>新聞回顧：<br />2020/05/17　報呱　<a href="https://www.pourquoi.tw/taiwan-news20200517-1/" target="_blank" rel="noopener"></a><a href="https://www.pourquoi.tw/taiwan-news20200517-1/" target="_blank" rel="noopener">彩虹旗幟升起周年　哪些議題尚待陽光普照？</a><br />2021/01/27　報呱　<a href="https://www.president.gov.tw/News/27240" target="_blank" rel="noreferrer noopener"></a><a href="https://www.pourquoi.tw/taiwan-news20210127-1/" target="_blank" rel="noopener" title="10127-1/">司法院日前提案修法　允許外國人在台成立同性婚姻</a></p><p>The post <a href="https://pourquoi.tw/taiwan-20230121-1/">蘇貞昌拍板通過跨國同婚　除中國外之同志伴侶可在台灣登記</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
