Update VOCUS 2023-01-25 patch

--- a/_posts/2023-01-22-VOCUS-自帶衣架的神.html
+++ b/_posts/2023-01-22-VOCUS-自帶衣架的神.html
@@ -16,15 +16,11 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">直至二戰落幕後的世界短暫承平，西元1947年，也就是首次擔綱「佛旦」一角的六年之後，霍特才開始於英國、阿根廷與美國等地，陸續進行了多次的海外巡迴演唱。</div>
 <div class="draft-block draft--p left">西元二十世紀五零年代初期，霍特一度因氣喘問題與演出壓力（前納粹音樂家的疑慮）而導致登台時聲音出現莫名的顫抖與飄移，還被媒體懷疑是否已到了表演工作的遲暮尾聲，但萬幸的是，經由自律自發的作息規劃，他不只東山再起，更儼然成為了華格納作品的不二人想，<span style="font-weight: bold; ">連續七個夏日的拜魯特（Bayreuther Festspiele），音樂節上屹立不搖的名字，Hans Hotter / Wotan，磅礴震世的眾神之王，他的詮釋裡除了有人類與神祇間的矛盾與交融，彷若就是佛旦的化身……今日假如要評選年輕一輩佛旦演唱者的水平優劣，度量衡上的指標，毫無疑問，Hans Hotter = Wotan，無人有異議。</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/1bd8bb27-8b20-4d0e-a3ff-2af5c91dfe12.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://richard-wagner-web-museum.com/famille-epoque-entourage-interpretes/hotter-hans/</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/JR4_9-4cW_o"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/JR4_9-4cW_o"></iframe></div>
 <div class="draft-block draft--p left">西元1972年，霍特在巴黎歌劇院向滿場聽眾們鞠躬謝幕，也光榮道別了佛旦……精采絕倫的偉大扮相；但不說您可能不知道，霍特其實也是當代最成功的德語藝術歌曲（Lied）名家，尤其是無憂王子舒伯特（Franz Schubert）的《冬之旅》（Winterreise）等樂集，<span style="font-weight: bold; ">他能夠精準咬字（德文不好唸）又維持作曲家優美動人的旋律，無怪乎遠赴東瀛的客座演出時，三個星期內竟然獻唱了八場的《冬之旅》，風雪之晨（Der stürmische Morgen），霍特的歌聲是孤寂旅人最好的陪伴。</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/b576d887-09eb-4bc5-bf17-838e072659af.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.amazon.co.uk/Hans-Hotter-ICON/dp/B001QEJQYA</figcaption></div></div>
 <div class="draft-block draft--p left">更加難能可貴，也或許是魔羯宮的自成一格參雜了些許水瓶流瀉而下的天才與異象，霍特在演出之餘，也著手操刀全本歌劇的「導演製作」和音樂節目的「朗誦」，更「幽默天真」的無私傳授聲樂技巧給世界各地的大師班學子們……</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/7AAR-C5z3lg"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/7AAR-C5z3lg"></iframe></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">「London Hotter！」</span></div>
 <div class="draft-block draft--p left">，剛受邀來到倫敦演出時，霍特差一點以為他想移民不列顛的計畫已經傳遍大街小巷，但幾分鐘之後，他才意識到新聞標題指的是「天氣」。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/e9c5ab92-16e5-4b05-9143-ace73043564e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.flickr.com/photos/merola/4832035591</figcaption></div></div>
