--- a/_posts/2023-01-24-VOCUS-古典馬雅新年的一些紀錄.html
+++ b/_posts/2023-01-24-VOCUS-古典馬雅新年的一些紀錄.html
@@ -11,11 +11,10 @@ author: 馬雅人
 <div class="draft-block draft--p left">最近剛好是農曆新年，馬雅國大使先祝大家新年快樂，事事順心。</div>
 <div class="draft-block draft--p left">如果說到馬雅文化有沒有新年的相關記載，這個就要回到曆法來看了。眾所皆知，馬雅文化主要有三種曆法，分別是260天的卓爾金曆（Tzolkin）、365天的哈布曆（Haab）以及5125年為一個週期的長紀年曆（Long count）。有關這些曆法運作的方式，歡迎參考大使的影片。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">卓爾金曆與哈布曆</span></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/hN8UxBspa8I"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/hN8UxBspa8I"></iframe></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">長紀年曆</span></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/7Az1anzDnvg"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/7Az1anzDnvg"></iframe></div>
 <div class="draft-block draft--p left">接著，問題來了，既然有這麼多曆法，哪個才是馬雅人的新年呢？</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">實際上，365天的哈布曆可能是最具有新年意義的曆法。哈布曆的第一個月，叫做Pop月，這個月的第一天，馬雅學家稱為Seating of Pop，看來這就是馬雅人的新年了。不過，馬雅人當然沒有這麼簡單。雖然哈布曆是一種曆法，但是瑪雅人卻很少單獨使用哈布曆。通常365天的哈布曆與260天的卓爾金曆會一起出現。而且，兩者會組成一個52年為一個循環的曆輪（Calendar Round）。由於排列組合的關係，365天除以卓爾金曆13個符號，會餘1。因此，卓爾金曆的第一個月第一天Seating of Pop，與之組合的卓爾金曆一定是Ik'、Manik、Eb'、K'aban四個符號，輪流組合。每四年一個循環，第五年就會回到第一個符號Ik'。考古學家將這樣的規律與新年符號，稱之為名年（Year bearer）。</div>
 <div class="draft-block draft--p left">例如，在Naranjo的第18號石碑，就出現過一個名年符號，以及新年的相關記載。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/3c479b15-08fd-4268-b590-2af40b84b7e4.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
@@ -31,6 +30,3 @@ author: 馬雅人
 <h3 class="draft-block draft--h3" name="header-f65f3">馬雅新年</h3>
 <div class="draft-block draft--p left">今日流行於坊間的十三月亮曆，是一種二創馬雅文化的身心靈信仰。由於「馬雅印記」、「馬雅圖騰」等「馬雅」，廣泛的用在他們的著作與課程中。不免讓人認為所謂十三月亮曆是一種傳承自古馬雅的曆法。（雖然他們一開始的確就是強力巴著馬雅文化，只是現在不承認罷了。另外，所謂的圖騰，也是從卓爾金曆的字符改來的。）</div>
 <div class="draft-block draft--p left">他們時常宣稱7月21日是馬雅新年。不過，如果從哈布曆來看，上一次7月21日是Seating of Pop的日子已經要回溯到西元1520年~1523年之間了。由於哈布曆不置閏年，所以每四年會誤差一天，故每四年新年的日期就會提前一天。如此，按照古馬雅曆法來說，不可能每年的新年都是７月21日。 </div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"> </div>
